# conceptual-kit

./: .gitignore  ARCHITECTURE_FIX.md  CHANGELOG.md  COMMANDS_REFERENCE.md  INSTALL.md  LICENSE  NEXT_STEPS.md  PROJECT_STRUCTURE.md  QUICK_START.md  README.md  SETUP_SUMMARY.md  VALIDATION_REPORT.md  conceptual-modeling.md  pyproject.toml
.claude/commands/: concept-add-object.md  concept-init.md  concept.add-action.md  concept.add-relationship.md  concept.generate.md  concept.review.md  concept.status.md
.claude/steering/: conceptual-modeling-guide.md
.github/: copilot-instructions.md
conceptual_kit/: __init__.py  cli.py
examples/e-commerce/: conceptual-model.md
examples/google-calendar/: conceptual-model.md
examples/todo-app/: conceptual-model.md
templates/: base-model.md
templates/components/: object-card.md  relationship-diagram.md  workflow-steps.md
