[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "conceptual-kit"
version = "0.1.0"
description = "A framework for creating comprehensive conceptual models for applications"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Conceptual Kit Contributors" }
]
keywords = [
    "conceptual-model",
    "user-experience",
    "mental-models",
    "design",
    "product-design",
    "ux",
    "framework"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "click>=8.0.0",
    "rich>=13.0.0",
    "jinja2>=3.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]
pdf = [
    "pypandoc>=1.11",
]

[project.scripts]
conceptual = "conceptual_kit.cli:main"

[project.urls]
Homepage = "https://github.com/Lab-Secreto/conceptual-kit"
Documentation = "https://github.com/Lab-Secreto/conceptual-kit#readme"
Repository = "https://github.com/Lab-Secreto/conceptual-kit"
Issues = "https://github.com/Lab-Secreto/conceptual-kit/issues"

[tool.hatch.build.targets.wheel]
packages = ["conceptual_kit"]

[tool.hatch.build.targets.sdist]
include = [
    "/conceptual_kit",
    "/templates",
    "/examples",
    "/README.md",
    "/LICENSE",
    "/conceptual-modeling.md",
]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
